fix collapsable styling in exchange

--- a/app/assets/stylesheets/components/_exchange.scss
+++ b/app/assets/stylesheets/components/_exchange.scss
@@ -88,6 +88,10 @@ div#CenterContent {
     }
 }
 
+.ant-collapse-header {
+    padding-left: 40<px !important;
+}
+
 .top-bar {
     border-bottom: 1px solid grey;
 
